--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+html = r"""
 <!doctype html>
 <html lang="ko">
 <head>
@@ -408,4 +408,10 @@ setOrderForUnit("ALL");
 </script>
 </body>
 </html>
+"""
 
+with open("index.html", "w", encoding="utf-8") as f:
+    f.write(html)
+
+from IPython.display import IFrame
+IFrame("index.html", width=1120, height=780)
