--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ const items = [
   { unit:8, id:"U8-4", ko:"큐비트를 더 많이 추가하면 계산 능력이 기하급수적으로 증가한다.", hint:"(exponentially)",
     en:"Adding more qubits exponentially increases the computational capacity." },
   { unit:8, id:"U8-5", ko:"정부와 민간 부문 모두 이 기술에 투자하고 있다.", hint:"(alike)",
-    en:"Governments and private sectors alike are investing in this technology. (recognizing its vast potential.",
+    en:"Governments and private sectors alike are investing in this technology.",
     aliases:[
       "Governments and private sectors alike are investing in this technology, recognizing its vast potential.",
       "Governments and private sectors alike are investing in this technology."
@@ -129,7 +129,7 @@ const items = [
   { unit:9, id:"U9-3", ko:"연결된 디바이스의 수가 증가함에 따라 보안은 주요 관심사이다.", hint:"(a major concern)",
     en:"Security is a major concern as the number of connected devices increases." },
   { unit:9, id:"U9-4", ko:"이로 인해 디바이스 간 원활한 통신이 어려울 수 있다.", hint:"(make it difficult for)",
-    en:"This can make it difficult for devices to communicate with each other seamlessly, hindering interoperability." },
+    en:"This can make it difficult for devices to communicate with each other seamlessly." },
   { unit:9, id:"U9-5", ko:"개인 데이터 수집은 개인정보 보호 문제를 야기한다.", hint:"(raise)",
     en:"The collection of personal data raises privacy concerns." },
 
@@ -422,3 +422,4 @@ setOrderForUnit("ALL");
 </script>
 </body>
 </html>
+
