--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ const items = [
   { unit:7, id:"U7-4", ko:"일반 AI라고도 불리는 강인공지능은 인간과 같은 지능을 보유하는 것을 목표로 한다.", hint:"(aim to)",
     en:"Strong AI, also referred to as general AI, aims to possess human-like intelligence." },
   { unit:7, id:"U7-5", ko:"기억력이 약한 AI는 과거 데이터를 통해 학습할 수 있는 능력이 있다.", hint:"(have the ability to)",
-    en:"limited memory AI has the ability to learn from historical data and adapt based on it.",
-    aliases:["Limited memory AI has the ability to learn from historical data and adapt based on it."]},
+    en:"limited memory AI has the ability to learn from historical data.",
+    aliases:["Limited memory AI has the ability to learn from historical data."]},
 
   // Unit 8
   { unit:8, id:"U8-1", ko:"기존 컴퓨터와는 달리 양자 컴퓨터는 양자 비트를 사용한다.", hint:"(unlike)",
@@ -440,5 +440,6 @@ setOrderForUnit("ALL");
 </script>
 </body>
 </html>
+
 
 
