--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     .ok { background:#e9fff0; }
     .bad { background:#ffecec; }
     .wrong {
-  background: #ffd6d6;
-  border: 1px solid #ef9a9a;
-  border-radius: 8px;
-  padding: 2px 6px;
-}
+      background: #ffd6d6;
+      border: 1px solid #ef9a9a;
+      border-radius: 8px;
+      padding: 2px 6px;
+    }
     .diff { margin-top:10px; line-height:1.9; }
     .token { padding:2px 6px; border-radius:10px; }
     .extra { background:#ffe7b8; }
@@ -36,12 +36,26 @@
     .pill { background:#111; color:#fff; border-radius:999px; padding:6px 10px; font-size:13px; }
     .pill span { opacity:.75; margin-left:6px; }
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 13px; }
+
+    /* 북마크 리스트 스타일 */
+    .bmItem{
+      border:1px solid #eee;
+      border-radius:12px;
+      padding:10px 12px;
+      background:#fff;
+      margin-top:8px;
+    }
+    .bmHead{ display:flex; justify-content:space-between; gap:10px; align-items:flex-start; }
+    .bmKo{ font-weight:700; line-height:1.4; }
+    .bmMeta{ font-size:12px; color:#666; margin-top:6px; }
+    .bmActions{ display:flex; gap:8px; flex-shrink:0; }
+    .bmBtn{ background:#eee; color:#111; padding:8px 10px; border-radius:10px; border:0; cursor:pointer; font-weight:600; }
+
     @media (max-width: 900px) {
-      .wrap {grid-template-columns: 1fr;   /* 2열 → 1열 */}
+      .wrap {grid-template-columns: 1fr;}
       .card { padding: 14px; }
       button { padding: 10px 12px; }
     }
-
   </style>
 </head>
 <body>
@@ -53,6 +67,8 @@
           <label class="small">Unit</label>
           <select id="unitSelect"></select>
           <div class="small" id="progress"></div>
+          <!-- ✅ 북마크 버튼을 상단(topbar)으로 -->
+          <button class="secondary" id="bookmarkBtn">☆ 북마크</button>
         </div>
       </div>
 
@@ -87,6 +103,18 @@
         <button class="secondary" id="copyBtn">복사</button>
       </div>
       <div class="hint">※ Unit을 바꿔도 오답 단어는 누적(전체)됩니다.</div>
+
+      <hr style="margin:16px 0; border:0; border-top:1px solid #eee;" />
+
+      <h1>북마크 문장</h1>
+      <div class="small">북마크한 문장을 저장/바로 이동 (브라우저에 저장됨)</div>
+      <div id="bookmarkList" style="margin-top:10px;"></div>
+
+      <div class="row" style="margin-top:12px;">
+        <button class="secondary" id="bmResetBtn">북마크 초기화</button>
+        <button class="secondary" id="bmExportBtn">CSV로 내보내기</button>
+        <button class="secondary" id="bmCopyBtn">복사</button>
+      </div>
     </div>
   </div>
 
@@ -169,7 +197,7 @@ function normalizeToTokens(s) {
   if (!s) return [];
   const lowered = String(s).toLowerCase();
   const cleaned = lowered
-    .replace(/[^a-z0-9\s]+/g, " ")  // 문장부호 제거(영어 기준)
+    .replace(/[^a-z0-9\s]+/g, " ")
     .replace(/\s+/g, " ")
     .trim();
   return cleaned ? cleaned.split(" ") : [];
@@ -208,7 +236,7 @@ function diffTokens(expected, user) {
   return { ops: merged, wrongExpectedWords };
 }
 
-/** ====== 저장 ====== */
+/** ====== 저장(오답 단어) ====== */
 const STORAGE_KEY = "wrong_words_v1";
 function loadWrongMap() {
   try { return new Map(Object.entries(JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}"))); }
@@ -218,8 +246,20 @@ function saveWrongMap(map) {
   const obj = Object.fromEntries([...map.entries()].map(([k,v]) => [k, Number(v)]));
   localStorage.setItem(STORAGE_KEY, JSON.stringify(obj));
 }
-
 let wrongMap = loadWrongMap();
+
+/** ====== 저장(문장 북마크) ====== */
+const BM_KEY = "sentence_bookmarks_v1"; // { [itemId]: timestamp }
+function loadBmMap() {
+  try { return new Map(Object.entries(JSON.parse(localStorage.getItem(BM_KEY) || "{}"))); }
+  catch { return new Map(); }
+}
+function saveBmMap(map) {
+  const obj = Object.fromEntries([...map.entries()]);
+  localStorage.setItem(BM_KEY, JSON.stringify(obj));
+}
+let bmMap = loadBmMap();
+
 let order = [];
 let idx = 0;
 let currentUnit = "ALL";
@@ -234,6 +274,9 @@ const wrongList = document.getElementById("wrongList");
 const progress = document.getElementById("progress");
 const answerKey = document.getElementById("answerKey");
 const unitSelect = document.getElementById("unitSelect");
+
+const bookmarkBtn = document.getElementById("bookmarkBtn");
+const bookmarkList = document.getElementById("bookmarkList");
 
 function renderWrongList() {
   const entries = [...wrongMap.entries()]
@@ -267,6 +310,7 @@ function renderQuestion() {
     koText.textContent = "선택한 Unit에 문제가 없어요.";
     hintBox.textContent = "";
     progress.textContent = "0 / 0";
+    updateBookmarkBtn();
     return;
   }
   const item = items[order[idx]];
@@ -278,6 +322,7 @@ function renderQuestion() {
   diffBox.innerHTML = "";
   answerKey.textContent = "";
   progress.textContent = `${idx+1} / ${order.length} (Unit ${currentUnit === "ALL" ? "ALL" : currentUnit})`;
+  updateBookmarkBtn();
 }
 
 function markWrongWords(words) {
@@ -288,6 +333,7 @@ function markWrongWords(words) {
   saveWrongMap(wrongMap);
   renderWrongList();
 }
+
 function clearInputAndView() {
   answer.value = "";
   statusBox.className = "status";
@@ -315,13 +361,7 @@ function escapeHtml(s) {
     .replaceAll("'", "&#039;");
 }
 
-
 function renderDiff(ops) {
-  // 정답(exp) 토큰만 문장처럼 출력
-  // - match: 일반
-  // - miss/sub: 빨간 표시(정답 단어를 못 맞힘)
-  // - extra(사용자 추가 단어): 정답 문장엔 없으니 표시 안 함(원하면 따로 표시 가능)
-
   const parts = [];
   for (const op of ops) {
     if (op.type === "match") {
@@ -332,11 +372,125 @@ function renderDiff(ops) {
       // 정답 문장 기준 표시만 원하면 extra는 무시
     }
   }
-
   diffBox.innerHTML = parts.join(" ");
 }
 
-/** ====== 이벤트 ====== */
+/** ====== 북마크 기능 ====== */
+function isBookmarked(itemId) {
+  return bmMap.has(itemId);
+}
+
+function updateBookmarkBtn() {
+  if (order.length === 0) return;
+  const item = items[order[idx]];
+  bookmarkBtn.textContent = isBookmarked(item.id) ? "★ 북마크됨" : "☆ 북마크";
+}
+
+function selectQuestionById(itemId) {
+  const itemIndex = items.findIndex(x => x.id === itemId);
+  if (itemIndex < 0) return;
+
+  const u = String(items[itemIndex].unit);
+  unitSelect.value = u;
+
+  currentUnit = u;
+  order = [];
+  items.forEach((it, i) => { if (String(it.unit) === u) order.push(i); });
+  idx = Math.max(0, order.indexOf(itemIndex));
+  renderQuestion();
+  window.scrollTo({ top: 0, behavior: "smooth" });
+}
+
+function renderBookmarkList() {
+  const entries = [...bmMap.entries()]
+    .map(([id, ts]) => ({ id, ts: Number(ts) || 0 }))
+    .sort((a,b)=> b.ts-a.ts);
+
+  bookmarkList.innerHTML = "";
+  if (entries.length === 0) {
+    bookmarkList.innerHTML = `<div class="small">아직 북마크가 없어요.</div>`;
+    return;
+  }
+
+  for (const {id} of entries) {
+    const it = items.find(x => x.id === id);
+    if (!it) continue;
+
+    const wrap = document.createElement("div");
+    wrap.className = "bmItem";
+
+    wrap.innerHTML = `
+      <div class="bmHead">
+        <div style="min-width:0;">
+          <div class="bmKo">${escapeHtml(it.ko)}</div>
+          <div class="bmMeta">Unit ${escapeHtml(it.unit)} · ${escapeHtml(it.id)}</div>
+        </div>
+        <div class="bmActions">
+          <button class="bmBtn" data-go="${escapeHtml(it.id)}">이동</button>
+          <button class="bmBtn" data-del="${escapeHtml(it.id)}">삭제</button>
+        </div>
+      </div>
+    `;
+
+    wrap.querySelector("[data-go]")?.addEventListener("click", () => selectQuestionById(it.id));
+    wrap.querySelector("[data-del]")?.addEventListener("click", () => {
+      bmMap.delete(it.id);
+      saveBmMap(bmMap);
+      renderBookmarkList();
+      updateBookmarkBtn();
+    });
+
+    bookmarkList.appendChild(wrap);
+  }
+}
+
+bookmarkBtn.addEventListener("click", () => {
+  if (order.length === 0) return;
+  const item = items[order[idx]];
+  if (isBookmarked(item.id)) bmMap.delete(item.id);
+  else bmMap.set(item.id, Date.now());
+  saveBmMap(bmMap);
+  renderBookmarkList();
+  updateBookmarkBtn();
+});
+
+document.getElementById("bmResetBtn").addEventListener("click", () => {
+  bmMap = new Map();
+  localStorage.removeItem(BM_KEY);
+  renderBookmarkList();
+  updateBookmarkBtn();
+});
+
+document.getElementById("bmExportBtn").addEventListener("click", () => {
+  const rows = [["id","unit","ko","en","timestamp"]];
+  for (const [id, ts] of bmMap.entries()) {
+    const it = items.find(x => x.id === id);
+    if (!it) continue;
+    rows.push([it.id, it.unit, it.ko, it.en, ts]);
+  }
+  const csv = rows.map(r => r.map(x => `"${String(x).replaceAll('"','""')}"`).join(",")).join("\n");
+  const blob = new Blob([csv], {type:"text/csv;charset=utf-8"});
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  a.href = url;
+  a.download = "bookmarks.csv";
+  a.click();
+  URL.revokeObjectURL(url);
+});
+
+document.getElementById("bmCopyBtn").addEventListener("click", async () => {
+  const lines = [...bmMap.entries()]
+    .sort((a,b)=>(Number(b[1])||0)-(Number(a[1])||0))
+    .map(([id]) => {
+      const it = items.find(x => x.id === id);
+      return it ? `[Unit ${it.unit}] ${it.ko} :: ${it.en}` : id;
+    })
+    .join("\n");
+  await navigator.clipboard.writeText(lines);
+  alert("북마크를 복사했어요!");
+});
+
+/** ====== 이벤트(기존) ====== */
 document.getElementById("checkBtn").addEventListener("click", () => {
   if (order.length === 0) return;
   const item = items[order[idx]];
@@ -369,10 +523,9 @@ document.getElementById("nextBtn").addEventListener("click", () => {
 
 document.getElementById("prevBtn").addEventListener("click", () => {
   if (order.length === 0) return;
-  idx = (idx - 1 + order.length) % order.length; // 음수 방지
+  idx = (idx - 1 + order.length) % order.length;
   renderQuestion();
 });
-
 
 document.getElementById("showBtn").addEventListener("click", () => {
   if (order.length === 0) return;
@@ -397,7 +550,7 @@ document.getElementById("resetBtn").addEventListener("click", () => {
 
 document.getElementById("exportBtn").addEventListener("click", () => {
   const rows = [["word","count"], ...[...wrongMap.entries()].map(([w,c])=>[w, c])];
-  const csv = rows.map(r => r.map(x => `"${String(x).replaceAll('"','""')}"`).join(",")).join("\\n");
+  const csv = rows.map(r => r.map(x => `"${String(x).replaceAll('"','""')}"`).join(",")).join("\n");
   const blob = new Blob([csv], {type:"text/csv;charset=utf-8"});
   const url = URL.createObjectURL(blob);
   const a = document.createElement("a");
@@ -410,7 +563,7 @@ document.getElementById("exportBtn").addEventListener("click", () => {
 document.getElementById("copyBtn").addEventListener("click", async () => {
   const text = [...wrongMap.entries()]
     .sort((a,b)=>Number(b[1])-Number(a[1]))
-    .map(([w,c])=>`${w}\\t${c}`).join("\\n");
+    .map(([w,c])=>`${w}\t${c}`).join("\n");
   await navigator.clipboard.writeText(text);
   alert("복사했어요!");
 });
@@ -434,12 +587,12 @@ function initUnitSelect() {
   unitSelect.addEventListener("change", (e) => setOrderForUnit(e.target.value));
 }
 
+/** ====== 초기 실행 ====== */
 initUnitSelect();
 renderWrongList();
+renderBookmarkList();
 setOrderForUnit("ALL");
+updateBookmarkBtn();
 </script>
 </body>
 </html>
-
-
-
