--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ const items = [
 
   // Unit 11
   { unit:11, id:"U11-1", ko:"당신은 Amazon.com과 같은 온라인 플랫폼을 통해 3D 프린터를 구매할 수 있다.", hint:"(purchase)",
-    en:"You can also purchase 3D printers and supplies online through platforms such as Amazon.com",
-    aliases:["You can purchase 3D printers and supplies online through platforms such as Amazon.com."]},
+    en:"You can also purchase 3D printers online through platforms such as Amazon.com",
+    aliases:["You can purchase 3D printers online through platforms such as Amazon.com."]},
   { unit:11, id:"U11-2", ko:"비록 전통적 정의와는 다르지만, 3D 프린팅은 프린팅의 한 형태로 간주될 수 있다.", hint:"(consider)",
     en:"3D printing can be considered a form of printing, although it differs from traditional definitions." },
   { unit:11, id:"U11-3", ko:"DLP 3D 프린팅은 액화 중합체를 굳게 하기 위해 디지털 광 처리 프로젝터를 사용한다.", hint:"(employ, a digital light processing projector, harden, a liquid polymer)",
@@ -607,4 +607,5 @@ updateBookmarkBtn();
 </script>
 </body>
 </html>
+
 
