--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ const items = [
   { unit:12, id:"U12-2", ko:"모터 선택은 필요한 전력과 원하는 비행 특성 등의 요인에 달려있다.", hint:"(depend on, desired flight characteristics)",
     en:"The choice of motors depends on factors like required power and desired flight characteristics." },
   { unit:12, id:"U12-3", ko:"최적의 비행을 위해서는 용량과 무게 사이의 적절한 균형을 찾는 것이 중요하다.", hint:"(capacity and weight, crucial, ensure)",
-    en:"To achieve optimal flight, it is crucial to a proper balance between capacity and weigth.",
+    en:"Finding the right balance between capacity and weight is crucial to ensure optimal.",
     aliases:["Finding the right balance between capacity and weight is crucial to ensure optimal flight."]},
   { unit:12, id:"U12-4", ko:"안정성과 일관된 성능을 위해 4개의 동일한 ESC를 사용하는 것이 적극 권장된다.", hint:"(stability, consistent performance)",
     en:"It is highly recommended to use four indentical ESCs for stability and consistent performace.",
@@ -607,6 +607,7 @@ updateBookmarkBtn();
 </script>
 </body>
 </html>
+
 
 
 
