--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ const items = [
 
   // Unit 12
   { unit:12, id:"U12-1", ko:"드론은 조종사나 컴퓨터에 의해 원격으로 제어되는 로봇 항공기를 말합니다.", hint:"(robotic aircraft, remotely)",
-    en:"Drone are robotic aircraft controlled remotely by a pilot or computer.",
+    en:"Drones are robotic aircraft controlled remotely by a pilot or computer.",
     aliases:["Drones are robotic aircraft controlled remotely by a pilot or computer."]},
   { unit:12, id:"U12-2", ko:"모터 선택은 필요한 전력과 원하는 비행 특성 등의 요인에 달려있다.", hint:"(depend on, desired flight characteristics)",
     en:"The choice of motors depends on factors like required power and desired flight characteristics." },
@@ -607,6 +607,7 @@ updateBookmarkBtn();
 </script>
 </body>
 </html>
+
 
 
 
