--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ const items = [
     en:"Finding the right balance between capacity and weight is crucial to ensure optimal.",
     aliases:["Finding the right balance between capacity and weight is crucial to ensure optimal flight."]},
   { unit:12, id:"U12-4", ko:"안정성과 일관된 성능을 위해 4개의 동일한 ESC를 사용하는 것이 적극 권장된다.", hint:"(stability, consistent performance)",
-    en:"It is highly recommended to use four identical ESCs for stability and consistent performace.",
+    en:"It is highly recommended to use four identical ESCs for stability and consistent performance.",
     aliases:["It is highly recommended to use four identical ESCs for stability and consistent performance."]},
   { unit:12, id:"U12-5", ko:"복잡한 드론 비행을 마스터하려면 이러한 원칙에 대한 연습과 숙지가 필요하다.", hint:"(require, practice, familiarity)",
     en:"Mastering the intricacies of drone flights requires practice and familiarity with these principles." },
@@ -607,6 +607,7 @@ updateBookmarkBtn();
 </script>
 </body>
 </html>
+
 
 
 
